test_suite/tests/ui/unexpected-literal/container.stderr
error: unexpected literal in serde container attribute
 --> $DIR/tests/ui/unexpected-literal/container.rs:4:9
  |
4 | #[serde("literal")]
  |         ^^^^^^^^^
